# graphgp

./: .gitignore  README.md  basic.ipynb  benchmark.py  debug_variance.ipynb  demo.ipynb  demo.py  graph_sharding.py  inspect_1d.ipynb  logo.ipynb  marlowe_job.sh  new.ipynb  paper.md  plot_benchmarks.ipynb  pyproject.toml  test_graph_timing.json  test_inverse_and_logdet.ipynb  test_jit_timing.json  test_jvp_vjp.ipynb  test_large.py  test_tree.ipynb  test_vjp_jvp.ipynb  test_warmup_naming.json  understand_variance.ipynb  vedant.ipynb
.github/workflows/: publish.yml  tests.yml
benchmarks/: benchmark.py  benchmark_simple.py  billion.json  billion_config.json  compare_all.json  compare_scaling.json  cuda_breakdown_scaling.json  cuda_scaling.json  cuda_scaling_config.json  graph_timing.json  make_scaling_config.py  plot_benchmarks.ipynb  scaling_config.json  simple_plots.py  simple_results.json  single.json  test_large.py  test_output_format.json
gpgpu_benchmark/: benchmark_gpgpu.R  graphgp_config.json  make_config.py  plot_comparison.py
graphgp/: __init__.py  covariance.py  extras.py  graph.py  graph_sharding.py  refine.py  tree.py  utils.py
hugegp/: __init__.py  covariance.py  graph.py  refine.py  tree.py
old/: inspect_1d.ipynb  inspect_variance.ipynb  logo.ipynb  spiral.ipynb  vedant.ipynb
output/: cuda_scaling_results.json  scaling_results.json  slurm-88952.out  slurm-88953.out  slurm-88954.out  slurm-88956.out  slurm-89085.out  slurm-89086.out  slurm-89090.out  slurm-89110.out  slurm-89135.out  slurm-89160.out  slurm-89163.out  slurm-89188.out
plots/: basic_gp.py  benchmark.py  icr.py  kl.py  kl_plot.py  order_comparison.py  simple_plots.py  standalone_plots.py
tests/: test_cuda.py  test_graph.py  test_refine.py  test_tree.py
