[project]
name = "hugegp"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies] 
dev = [
    "optax",
    "jaxkd[cuda]",
    "ipywidgets>=8.1.7",
    "jax[cuda12]==0.6.0",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "tqdm>=4.67.1",
]

[project.urls]
Source = "https://github.com/dodgebc/hugegp"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]

[dependency-groups]
dev = [
    "cmasher>=1.9.2",
    "cmocean>=4.0.3",
    "pytest>=8.4.1",
]
