[project]
name = "graphgp"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax"
]

[project.optional-dependencies] 
dev = [
    "optax",
    "jaxkd[cuda]",
    "ipywidgets>=8.1.7",
    "jax[cuda12]==0.8.0",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "tqdm>=4.67.1",
    "scipy",
]

[project.urls]
Source = "https://github.com/dodgebc/graphgp"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]
lint.ignore = ["E402"]

[dependency-groups]
dev = [
    "cmasher>=1.9.2",
    "cmocean>=4.0.3",
    "pytest>=8.4.1",
]
