[project]
name = "graphgp"
dynamic = ["version"]
description = "Scalable Gaussian processes with nearest neighbor graphs."
authors = [
    {name="Benjamin Dodge", email="bendodge@stanford.edu"},
    {name="Philipp Frank", email="phfrank@stanford.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
]

[project.optional-dependencies] 
cuda = [
    "jax[cuda12]"
    "graphgp-cuda"
]
dev = [
    "optax",
    "jaxkd[cuda]",
    "ipywidgets>=8.1.7",
    "jax[cuda12]"
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "tqdm>=4.67.1",
    "scipy",
]

[project.urls]
Source = "https://github.com/stanford-ism/graphgp"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120
exclude = ["*.ipynb"]
lint.ignore = ["E402"]

[tool.uv.sources]
graphgp-cuda = { path = "../graphgp-cuda" }
